previo a las dependencias nuevas

--- a/index.html
+++ b/index.html
@@ -436,11 +436,11 @@
 
                 <input type="email" class="form-control" name="cf-email" id="txtEmailMebresia" placeholder="Email">
 
-                <input type="tel" class="form-control" name="cf-phone" placeholder="123-456-7890" id="txtTelefonoMmebresia" required>
+                <input type="tel" class="form-control" name="cf-phone" placeholder="123-456-7890" id="txtTelefonoMebresia" required>
 
-                <textarea class="form-control" rows="3" name="cf-message" id="txtMensajeMebresia" placeholder="Mensaje adicional"></textarea>
+                <textarea class="form-control" rows="3" name="cf-message" id="txtMensajeMembresia" placeholder="Mensaje adicional"></textarea>
 
-                <a onclick="reguistarUsuario()" href="#" class="form-control" id="submit-button1" name="submit">Enviar</a>
+                <a onclick="registrarUsuario()" href="#" class="form-control" id="submit-button1" name="submit">Enviar</a>
 
 
             </form>
