--- a/public/index.html
+++ b/public/index.html
@@ -503,7 +503,7 @@
 
             <form
               id="form1"
-              action="/warryorsgym1post1"
+              action="/warryors1post1"
               method="post"
               class="contact-form webform"
               data-aos="fade-up"
@@ -513,6 +513,7 @@
               <input
                 type="text"
                 class="form-control"
+                id="name"
                 name="name"
                 placeholder="Nombre"
               />
@@ -521,6 +522,7 @@
                 type="email"
                 class="form-control"
                 name="email"
+                id="email"
                 placeholder="Email"
               />
 
@@ -528,6 +530,7 @@
                 class="form-control"
                 rows="5"
                 name="message"
+                id="message"
                 placeholder="Mensaje"
               ></textarea>
 
@@ -535,7 +538,7 @@
                 type="submit"
                 class="form-control"
                 id="submit-button"
-                name="submit"
+                name="submit-button"
               >
                 Enviar mensaje
               </button>
@@ -679,18 +682,7 @@
     <script src="/public/js/aos.js"></script>
     <script src="/public/js/smoothscroll.js"></script>
     <script src="/public/js/custom.js"></script>
-    <script>
-      const form = document.getElementById('form1');
-        form.addEventListener('submit', (event) => {
-        event.preventDefault(); // evita el envío del formulario
-        console.log(new FormData(form));
-        fetch('/warryorsgym1post1', {
-          method: 'POST',
-          body: new FormData(form)
-        }).then((response) => response.text()) // obtener la respuesta del servidor
-          .then((result) => console.log(result)) // mostrar la respuesta del servidor en la consola
-          .catch((error) => console.error(error)); // manejar cualquier error
-      });
-    </script>
+    <script src="/public/js/asyncForm.js"></script>
+    <!--<script src="/public/js/asyncForm.js"></script>-->
   </body>
 </html>
